--- a/demo.yaml
+++ b/demo.yaml
@@ -1,23 +1,22 @@
 - headers:
-    user-agent: fetch-synthetic-monitor
+    user-agent: placeholder-user-agent
   method: GET
-  name: fetch index page
-  url: https://fetch.com/
-  
+  name: placeholder index page
+  url: https://placeholder.com/
+
 - headers:
-    user-agent: fetch-synthetic-monitor
+    user-agent: placeholder-user-agent
   method: GET
-  name: fetch careers page
-  url: https://fetch.com/careers
-  
-- body: '{"foo":"bar"}'
+  name: placeholder careers page
+  url: https://placeholder.com/careers
+
+- body: '{"key":"value"}'
   headers:
     content-type: application/json
-    user-agent: fetch-synthetic-monitor
+    user-agent: placeholder-user-agent
   method: POST
-  name: fetch some fake post endpoint
-  url: https://fetch.com/some/post/endpoint
-  
-- name: fetch rewards index page
-  url: https://www.fetchrewards.com/
+  name: placeholder post endpoint
+  url: https://placeholder.com/some/post/endpoint
 
+- name: placeholder rewards index page
+  url: https://www.placeholder.com/
